# push-pull-code

./: .gitignore  LICENSE  README.md  pyproject.toml
additional-analyses/: analysis-goda.ipynb  analysis-helm.ipynb
data/raw_data/: protein-information-syp.xlsx  raw_goda_data.pkl  raw_helm_data.pkl
data/validation_data/royer_data/: sort.py  (+2 more)
figures-main/: binned-data  figure-3.ipynb  figure-4-single-panels.ipynb  figure-4.ipynb  figure-5.ipynb  figure-6.ipynb  output
figures-main/.ipynb_checkpoints/: figure-2-checkpoint.ipynb  figure-4-checkpoint.ipynb
figures-main/local-output/: change-after-stim.npy
figures-supplementary/: binned-data  figure-S12.ipynb  figure-S13.ipynb  figure-S14.ipynb  figure-S2-S3-S4-S5-S6.ipynb  figure-S7.ipynb  figure-S8-S9-S10-S11.ipynb
pypesto-fit/: fit-model.py  generate-binned-datasets.py  sample-posteriors.py  validation_data
pypesto-fit/binned-data/: 1Spine_counts.txt  1Spine_data.txt  1Spine_data_errs.txt  1Spine_x.txt  3Spine_counts.txt  3Spine_data.txt  3Spine_data_errs.txt  3Spine_x.txt  5Spine_counts.txt  5Spine_data.txt  5Spine_data_errs.txt  5Spine_x.txt  7Spine_counts.txt  7Spine_data.txt  7Spine_data_errs.txt  7Spine_t.txt  7Spine_x.txt  norm_1Spine_data.txt  norm_1Spine_data_errs.txt  norm_3Spine_data.txt  norm_3Spine_data_errs.txt  norm_5Spine_data.txt  norm_5Spine_data_errs.txt  norm_7Spine_data.txt  norm_7Spine_data_errs.txt  output
scripts/: generate_goda_raw_dataframe.py  generate_helm_raw_dataframe.py  readme.md
src/RDN.egg-info/: PKG-INFO  SOURCES.txt
src/rdn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+110 files in other folders)
