[project]
name = "rdn"
version = "0.0.1"
authors = [
  { name="Janko Petkovic", email="petkojan@uni-bonn.de" },
]
description = "Modules used for the work in DOI"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ipykernel",
    "fides",
    "matplotlib",
    "pypesto",
    "torch",
    "statsmodels",
    "scikit_posthocs",
    "palettable",
    "scikit-image",
]

[project.urls]
"Homepage" = "https://github.com/janko-petkovic/rdn"
